[project]
name = "weather-dwh"
version = "0.1.0"
description = "Packages for building end2end ETL-pipeline and DWH using weather data"
authors = [
    {name = "Artem1s1337",email = "artem1smodin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
package-mode = false
requires-python = ">=3.12,<3.14"
dependencies = [
    "apache-airflow-providers-apache-spark (>=5.4.2,<6.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "clickhouse-driver (>=0.2.10,<0.3.0)",
    "pyspark (>=4.1.1,<5.0.0)",
    "apache-airflow-providers-postgres (>=6.5.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
